--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "types": "pnpm dlx supabase gen types typescript --project-id 'znpopvkuzlvfppwitwdn' --schema public > supabase/supabase-types.ts"
+    "supabase-types": "pnpm dlx supabase gen types typescript --project-id znpopvkuzlvfppwitwdn --schema public > supabase/supabase-types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -60,6 +60,7 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "vaul": "^1.1.2",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.3"
   },
   "devDependencies": {
