--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "supabase-types": "pnpm dlx supabase gen types typescript --project-id znpopvkuzlvfppwitwdn --schema public > supabase/supabase-types.ts"
+    "supabase-types": "pnpm dlx supabase gen types typescript --project-id hswogmwztupospftowaa --schema public > supabase/supabase-types.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
@@ -50,8 +50,11 @@
     "next": "15.3.1",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
+    "react-calendar": "^6.0.0",
     "react-country-state-city": "^1.1.12",
-    "react-day-picker": "8.10.1",
+    "react-date-picker": "^11.0.0",
+    "react-datepicker": "^8.4.0",
+    "react-day-picker": "9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-phone-number-input": "^3.4.12",
